--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ categories = ["simulation"]
 readme = "README.md"
 
 [dependencies]
+
+[dev-dependencies]
+anyhow = "1.0.68"
+kiss3d = "0.35.0"
+nalgebra = "0.30.1"
+rand = "0.8.5"
