--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "ecs"
+name = "parsecs"
 version = "0.1.0"
 edition = "2021"
 description = "An entity component system data structure"
 license = "MIT"
-repository = "https://github.com/matthewjberger/ecs"
+repository = "https://github.com/matthewjberger/parsecs"
 keywords = ["simulation"]
 categories = ["simulation"]
 readme = "README.md"
