--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,3 +54,6 @@ jobs:
         run: cargo test --all -- --nocapture
         env:
           RUST_LOG: debug
+
+      - name: Benchmark
+        run: cargo bench
