--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ readme = "README.md"
 
 [dev-dependencies]
 anyhow = "1.0.68"
+criterion = { version = "0.4.0", features = ["html_reports"] }
 kiss3d = "0.35.0"
 nalgebra = "0.30.1"
 rand = "0.8.5"
+
+[[bench]]
+name = "benchmarks"
+harness = false
